--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon main.js", 
+    "dev": "nodemon main.js",
     "start": "node main.js"
   },
   "keywords": [],
@@ -14,6 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
